# m1-mathematics

./: .gitignore  CMakeLists.txt
include/m1_mathematics/: Float3.h  MathUtility.h  Orientation.h  Quaternion.h
src/: Float3.cpp  Orientation.cpp  Quaternion.cpp
tests/: Float3Tests.cpp  OrientationTests.cpp  QuaternionTests.cpp
